# continue

./: .gitignore  CLA.md  COMMIT_REVERT.md  CONTRIBUTING.md  README.md  README.zh.md
.continue/: settings.json
.github/workflows/: auth-service.yml  custom-jetbrains-release.yaml  custom-release-offline.yml  custom-stable-release.yml  custom-vscode-preview.yaml  jetbrains-release.yaml  preview.yaml
auth-service/: .env.example  Dockerfile  database.py  docker-compose.yml  main.py  requirements.txt  simple_main.py  test_login.sh
binary/: build.js
core/: core.ts  index.d.ts  package-lock.json
core/config/: types.ts
core/control-plane/: AuthTypes.ts  TeamAnalytics.ts  env.ts
core/llm/: autodetect.ts  index.ts  toolSupport.test.ts  toolSupport.ts
core/protocol/: ide.ts  ideWebview.ts
core/tools/: parseArgs.ts
core/util/: paths.ts  posthog.ts  text.ts
dev-data-service/: .env.example  .env.mysql.example  .gitignore  Dockerfile  README.md  database.py  docker-compose.mysql.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test_api.py
dev-data-service/docs/: API_TESTING_GUIDE.md  MYSQL_TROUBLESHOOTING.md  QUICK_REFERENCE.md  README.md  TOKEN_AUTH_GUIDE.md
dev-data-service/scripts/: diagnose-mysql.sh  mysql-server-setup.sql  quick-test.sh  setup-mysql.sh  test-api.sh
docs/: CONTRIBUTING.mdx  faqs.mdx  home.mdx  index.mdx
docs/cli/: install.mdx  overview.mdx
docs/customization/: models.mdx  prompts.mdx
docs/customize/: custom-providers.mdx
docs/guides/: cli.mdx  (+18 more)
extensions/: custom-cli.sh  custom.sh
gui/: vite.config.ts
(+168 files in other folders)
