[project]
name = "continue-dev-data-service"
version = "1.0.0"
description = "Backend service for collecting and managing Continue development data"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.110.0",
    "uvicorn==0.29.0",
    "python-dotenv==1.0.0",
    "pydantic==1.10.21",
    "pymysql>=1.1.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "httpx>=0.24.0"
]

[project.scripts]
dev-data-service = "main:app"
